feat: update site url

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -18,10 +18,10 @@ jobs:
           source-repo: git@github.com:doocs/qcloud-im-server-sdk-java.git
           destination-repo: git@gitee.com:Doocs/qcloud-im-server-sdk-java.git
       
-      - name: Build Gitee Pages
-        uses: yanglbme/gitee-pages-action@main
-        with:
-          gitee-username: yanglbme
-          gitee-password: ${{ secrets.GITEE_PASSWORD }}
-          gitee-repo: doocs/qcloud-im-server-sdk-java
-          branch: gh-pages
+      # - name: Build Gitee Pages
+      #   uses: yanglbme/gitee-pages-action@main
+      #   with:
+      #     gitee-username: yanglbme
+      #     gitee-password: ${{ secrets.GITEE_PASSWORD }}
+      #     gitee-repo: doocs/qcloud-im-server-sdk-java
+      #     branch: gh-pages
