chore: add cname config

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,9 +26,10 @@ jobs:
         run: yarn docs:build
 
       - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2
+        uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: gh-pages
           build_dir: docs/.vuepress/dist
+          fqdn: im.doocs.org
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
